fix SW-BUG the image is jumping to center at resizing.

--- a/hotShareMobile/client/posts/addPost.less
+++ b/hotShareMobile/client/posts/addPost.less
@@ -3,7 +3,7 @@
 .addPost .head i{color: gray !important;}
 .addPost .content{position:relative;}
 .addPost .content .gridster {padding-left:5%; padding-right:5%;}
-.addPost .content #display{margin: auto}
+.addPost .content #display{}
 .addPost .content #display .resortitem .gs-resize-handle-both{background-image: none}
 .addPost .content #display .resortitem .imgContainer{width: 100%;height: 100%;position: absolute;overflow: hidden;}
 .addPost .content #display .pressed .isImage{border: 6px solid #00c4ff;position: relative}
